maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:56: error: not found: type indic
def ecrireAdj(x:Int,y:Int,indic:Int,H:indic,L:indic){
                                      ^ShortestPathMaze:56: error: not found: type indic
def ecrireAdj(x:Int,y:Int,indic:Int,H:indic,L:indic){
                                              ^